--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple blogs</title>
+    <style>
+
+    </style>
     <link rel="stylesheet" href="Styles/blogs.css">
+
 </head>
 <body>
     <div>
         <h3>This is my first Blog</h3>
         <p>Lorem ipsum, <span style="background-color: rgb(78, 169, 215);">dolor sit amet</span> consectetur adipisicing elit. Recusandae omnis necessitatibus repellendus veniam, at sint. Ab corrupti velit assumenda libero aliquid, quam consequatur doloribus ex, molestias fuga nesciunt tenetur itaque!</p>
+    </div>
+
+    <div>
+        <h3>This is my second blog</h3>
+        <p class="border_add">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum officiis exercitationem iste consequuntur itaque id autem eaque! Dolorum vel tempore reiciendis quis voluptatum in optio earum praesentium, tenetur quidem quos!
+        </p>
+    </div>
+
+    <div class="border_add">
+        <h3>This is my third blog</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sit libero doloremque facere! Possimus veniam, rem asperiores numquam nulla sed quasi officia fuga fugit, quaerat voluptas ut vel corporis nisi!
+        </p>
     </div>
 
 
