--- a/index.html
+++ b/index.html
@@ -11,25 +11,27 @@
 
 </head>
 <body>
-    <div>
-        <h3>This is my first Blog</h3>
-        <p>Lorem ipsum, <span style="background-color: rgb(78, 169, 215);">dolor sit amet</span> consectetur adipisicing elit. Recusandae omnis necessitatibus repellendus veniam, at sint. Ab corrupti velit assumenda libero aliquid, quam consequatur doloribus ex, molestias fuga nesciunt tenetur itaque!</p>
-    </div>
 
-    <div>
-        <h3>This is my second blog</h3>
-        <p class="border_add">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum officiis exercitationem iste consequuntur itaque id autem eaque! Dolorum vel tempore reiciendis quis voluptatum in optio earum praesentium, tenetur quidem quos!
-        </p>
-    </div>
+<div>
+    <h3>Commands after creating a new repository on GitHub: </h3>
+    <ol style="list-style:lower-roman;">
+        <li>git init</li>
+        <li><strong>git add .</strong></li>
+        <li>git commit -m "meaningful comment"</li>
+        <li>git branch -M main</li>
+        <li>git remote add origin https://....</li>
+        <li>git push -u origin main</li>
+    </ol>
+</div>
 
-    <div class="border_add">
-        <h3>This is my third blog</h3>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci sit libero doloremque facere! Possimus veniam, rem asperiores numquam nulla sed quasi officia fuga fugit, quaerat voluptas ut vel corporis nisi!
-        </p>
-    </div>
-
+<div>
+    <h3>How to push increamental code:  </h3>
+    <ul style="list-style:square;">
+        <li>git add .</li>
+        <li>git commit -m "add a meaningful commit message" .</li>
+        <li>git push .</li>
+    </ul>
+</div>
 
 </body>
 </html>
