--- a/index.html
+++ b/index.html
@@ -33,5 +33,22 @@
     </ul>
 </div>
 
+<div>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi nisi qui laborum labore. Doloremque aspernatur dignissimos consequuntur quasi, exercitationem inventore cupiditate debitis. Consequatur culpa soluta laudantium cumque esse facere at.
+    </p>
+</div>
+<div>
+    <ul>
+        <li>sakin</li>
+        <li>sakin</li>
+        <li>sakin</li>
+        <li>sakin</li>
+        <li>sakin</li>
+        <li>sakin</li>
+    </ul>
+</div>
+
+
 </body>
 </html>
